// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> renders properly 1`] = `
<h1
  class="jsx-1254015016 fontL"
>
  dummy text
</h1>
`;

exports[`<Title /> renders properly with a custom margin-bottom 1`] = `
<h1
  class="jsx-1873297724 fontL"
>
  dummy text
</h1>
`;

exports[`<Title /> renders properly with the colored class 1`] = `
<h1
  class="jsx-1254015016 fontL colored"
>
  dummy text
</h1>
`;
